--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <![endif]-->
 
   <article>
-    <h1><img src="img/actnowidiots.png" alt="ACT NOW, IDIOTS!" /></h1>
+    <h1><img src="img/actnowidiots2.png" alt="ACT NOW, IDIOTS!" /></h1>
      
     <blockquote>
     "Scientists might want to write in capital letters, 'ACT NOW, IDIOTS,' but they need to say that with facts and numbers. And they have."
