--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ FROM: Your citizens who are concerned with the lack of action towards battling t
       
 <p><b>We're also here to watch you.</b> We will keep on reminding you if you seem to slip from the target. Our feedback will be instant, it won’t wait for the next elections. We will utilize all legal & non-violent means at our disposal to make sure you do your damn job. Should you fail to step up to the task, we will take to the streets and let you hear our feedback out in the open. We will flood your inbox with our messages, we will be all over media letting everyone know you aren’t fit for the job.</p>
       
-      <p>If your actions aren’t impactful enough, you will hear from us. If your actions aren’t happening in the now, but you focus on what might be happening in 10 years, you will hear from us. If you stall the positive change initiated by others, you will hear from us. <b>In the end, if you don’t do your job, we will make sure that job isn’t yours to keep.</b></p>
+      <p>If your actions aren’t impactful enough, you will hear from us. If your actions aren’t happening in the now, but you focus on what might be happening in 10 years, you will hear from us. If you stall the positive change initiated by others, you will hear from us. <b>In the end, if you don’t do your job, we will make sure the job isn’t yours to keep.</b></p>
 <p class="marker"><i class="fas fa-angle-double-left"></i> <i class="fas fa-angle-double-right"></i></p>
 <p>So for all of our sakes: <b>ACT NOW, DEAR IDIOTS!</b></p>
 
