--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+<!-- COMMON TAGS -->
+<meta charset="utf-8">
+<title>ACT NOW, IDIOTS!</title>
+<!-- Search Engine -->
+<meta name="description" content="A global movement of angry & able citizens who aim to influence world leaders to stop climate change">
+<meta name="image" content="http://actnowidiots.org/img/post.png">
+<!-- Schema.org for Google -->
+<meta itemprop="name" content="ACT NOW, IDIOTS!">
+<meta itemprop="description" content="A global movement of angry & able citizens who aim to influence world leaders to stop climate change">
+<meta itemprop="image" content="http://actnowidiots.org/img/post.png">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="ACT NOW, IDIOTS!">
+<meta name="twitter:description" content="A global movement of angry & able citizens who aim to influence world leaders to stop climate change">
+<meta name="twitter:site" content="@ActNowIdiots">
+<meta name="twitter:image:src" content="http://actnowidiots.org/img/post.png">
+<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+<meta name="og:title" content="ACT NOW, IDIOTS!">
+<meta name="og:description" content="A global movement of angry & able citizens who aim to influence world leaders to stop climate change">
+<meta name="og:image" content="http://actnowidiots.org/img/post.png">
+<meta name="og:url" content="http://actnowidiots.org">
+<meta name="og:site_name" content="ACT NOW, IDIOTS!">
+<meta name="og:type" content="website">    
+    
+    
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
