--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ concerned citizens</p>
       
       <footer>
           
-          <p><b>Coming soon:</b> manifesto signing, actionable list for the leaders, tips for making sure leaders are doing there job, …</p>
+          <p><b>COMING SOON:</b> manifesto signing, actionable list for the leaders, tips for making sure leaders are doing their job, …</p>
 
           <p><b>For now, SHARE the message to your local leaders & friends around the world!</b></p>
 
