new sharing image

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <title>ACT NOW, IDIOTS!</title>
     <!-- Search Engine -->
     <meta name="description" content="A global movement of angry & able citizens demanding world leaders to fight climate change">
-    <meta name="image" content="http://actnowidiots.org/img/post.png">
+    <meta name="image" content="http://actnowidiots.org/img/postv2.png">
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="ACT NOW, IDIOTS!">
     <meta itemprop="description" content="A global movement of angry & able citizens demanding world leaders to fight climate change">
-    <meta itemprop="image" content="http://actnowidiots.org/img/post.png">
+    <meta itemprop="image" content="http://actnowidiots.org/img/postv2.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="ACT NOW, IDIOTS!">
     <meta name="twitter:description" content="A global movement of angry & able citizens demanding world leaders to fight climate change">
     <meta name="twitter:site" content="@ActNowIdiots">
-    <meta name="twitter:image:src" content="http://actnowidiots.org/img/post.png">
+    <meta name="twitter:image:src" content="http://actnowidiots.org/img/postv2.png">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="ACT NOW, IDIOTS!">
     <meta name="og:description" content="A global movement of angry & able citizens demanding world leaders to fight climate change">
-    <meta name="og:image" content="http://actnowidiots.org/img/post.png">
+    <meta name="og:image" content="http://actnowidiots.org/img/postv2.png">
     <meta name="og:url" content="http://ActNowIdiots.org">
     <meta name="og:site_name" content="ACT NOW, IDIOTS!">
     <meta name="og:type" content="website">
