typeform url change

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <script>
                 let popup;
                 window.addEventListener('DOMContentLoaded', function() {
-                    popup = window.typeformEmbed.makePopup('https://actnowidiots.typeform.com/to/Dj1Xk2', {
+                    popup = window.typeformEmbed.makePopup('https://ilmastoveivi.typeform.com/to/Dj1Xk2', {
                         autoClose: 1,
                         hideHeaders: true,
                         hideFooter: true,
