--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
 
         <footer>
 
+            <a href="http://twitter.com/ActNowIdiots"><i class="fab fa-twitter-square"></i> Join the movement that puts pressure to the leaders to ACT NOW to fight the war that is climate change – follow us on Twitter!</a>
+
             <section id="legal">"Act now, idiots!" is a global movement by and for angry &amp; able citizens demanding world leaders to fight climate change. There's no official organization, just a bunch of individuals trying to make a difference. All data is collected solely for the purpose of organizing the movement. You can reach us at actnow.idiots@gmail.com in case you e.g. want to have your information removed from the list of manifesto signees.</section>
 
         </footer>
